--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,8 +46,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/simple.json
-    - assets/doctor.json
+    
+    - assets/
+    - assets/json_files/simple.json
+    - assets/json_files/doctor.json
+    - assets/images/logo/logo.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
