--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ flutter:
     - assets/json_files/simple.json
     - assets/json_files/doctor.json
     - assets/json_files/person.json
+    - assets/json_files/patient.json
     - assets/images/logo/logo.png
     - assets/images/logo/logoB.png
     - assets/images/logo/logoD.png
