--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   syncfusion_flutter_calendar: ^19.1.57
   flutter_calendar_carousel: ^2.0.1
   steppers: ^0.0.1
+  flappy_search_bar_fork: ^1.7.4
+  searchable_dropdown: ^1.1.3
+  http: ^0.13.3
+  dropdown_search: ^0.6.1
   
 
 
